@@ -23,6 +23,9 @@ is_deeply([$user->_find_sst], ['SELECT id,name,email FROM users WHERE id=?', qw(
 is_deeply([$user->expand_sst('%t \\\%t')], ['users \%t'],     'escaped');
 is_deeply([$user->expand_sst('%pc')],      ['id,name,email'], 'pc');
 
+is_deeply([$user->expand_sst('%c.x from %t.x')],  ['x.name,x.email from users x'],      'alias x');
+is_deeply([$user->expand_sst('%pc.x from %t.x')], ['x.id,x.name,x.email from users x'], 'alias x');
+
 is_deeply([$user->_insert_sst],
   ['INSERT INTO users (name,email) VALUES (?,?) RETURNING id', qw( Bruce bruce@wayneenterprise.com )], 'insert');
 
