@@ -3,6 +3,7 @@ Revision history for perl distribution Mad-Mapper
 0.06 Not Released
  - Allow specifying "has_many" SST
  - Add TO_JSON() method to Mad::Mapper
+ - Add support for table aliases using "%x.alias"
 
 0.05 2015-09-01T10:22:07+0200
  - Add support for Mojo::SQLite #1
